--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </button>
             <span id="input-area">
                 <input type="text" class="Search-input" id="search-input" placeholder="Search">
-                <button class="search-btn" onclick="searchNews()">Go</button>
+                <button id="searh-Btn" class="search-btn">Go</button>
             </span>
         </div>
         <!-- 타이틀 + 메뉴 -->
@@ -80,6 +80,11 @@
             </div>
         </div>
       </section>
+      <nav aria-label="Page navigation example">
+        <ul class="pagination">
+  
+        </ul>
+      </nav>
     </section>
 
     <script
